@@ -19,6 +19,9 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-799: Local query without FROM throws IllegalArgumentException in 
+    CLI. (Hyoungjun Kim via hyunsik)
+
     TAJO-802: No partition columns in WEB catalog page. 
     (Hyoungjun Kim via hyunsik)
 
